feat: implement RAG service with pgvector and Spring AI for tariff and duplication analysis